* release_quarmail implemented * attachment mime-type by magic * swagger definition update
